# ai-engineering-fordham

./: .gitignore  README.md  homework-1.ipynb  homework-3.ipynb  homework-4.ipynb  pyproject.toml
scripts/: helpers.py
