[project]
name = "ai-engineering-fordham"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-genai>=1.59.0",
    "litellm>=1.81.4",
    "numpy>=2.2.6",
    "openai>=2.15.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
]
